Bug 30619 - ARM version doesn't check for XSERVER_PCIACCESS
Summary: ARM version doesn't check for XSERVER_PCIACCESS
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/XGI (show other bugs)
Version: git
Hardware: ARM Linux (All)
: medium trivial
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-05 04:29 UTC by Tristan Plumb
Modified: 2016-04-28 19:27 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Tristan Plumb 2010-10-05 04:29:12 UTC
Therefore compilation fails saying ioBase isn't a member of struct pci. Simple fix.

--- a/src/xgi_driver.c
+++ b/src/xgi_driver.c
@@ -2754,8 +2754,12 @@ XGIPreInit(ScrnInfoPtr pScrn, int flags)
 
     if (pXGI->Primary) {
 #if defined(__arm__) 
+#ifdef XSERVER_LIBPCIACCESS
+        VGAHWPTR(pScrn)->MapPhys = pXGI->PciInfo->regions[2].base_addr + 0xf2000000;   
+#else
         VGAHWPTR(pScrn)->MapPhys = pXGI->PciInfo->ioBase[2] + 0xf2000000;      
 #endif
+#endif
 
         VGAHWPTR(pScrn)->MapSize = 0x10000;     /* Standard 64k VGA window */
         if (!vgaHWMapMem(pScrn)) {
Comment 1 Connor Behan 2016-04-28 19:27:33 UTC
Fixed, with credit to the now unsubscribed OP.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.