Add check for libpciaccess on ARM

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=30619
Reviewed-by: Connor Behan <connor.behan@gmail.com>